# zama-challenge

./: .gitignore  Cargo.toml  README.md  REPORT.md
data/client/: 1.txt
src/client/: main.rs
src/mtree/: lib.rs
src/server/: main.rs
