[package]
name = "zama_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "mtree"
path = "src/mtree/lib.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
blake2 = "0.10"
bincode = "1.3"

[dev-dependencies]
rand = "0.8"